5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1667_2973.log
== TEST (2019-04-16 16:23:41) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S==100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:23:51) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S==100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- EXECUTION TIME:
0.155397
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:07) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S==100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:27) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S==100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:37) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S<=100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:44) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S<=100:
	print(int(S))
	print("OK")
else:
	print(int(S))
	print("ACIMA")
-- EXECUTION TIME:
0.153921
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:20) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:29) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.196079
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:41) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:11) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S == 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.161911
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:12) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S == 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:19) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S >= 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- EXECUTION TIME:
0.110655
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
OK
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:20) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S >= 100:
	print(S)
	print("OK")
else:
	print(S)
	print("ACIMA")
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:43) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print(' OK ')
else:
	print(S)
	print(' ACIMA ')
-- OUTPUT:
7202
 ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:28:44) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print(' OK ')
else:
	print(S)
	print(' ACIMA ')
-- EXECUTION TIME:
0.163797
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
 ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
 ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
 ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:47) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print(' OK ')
else:
	print(S)
	print(' ACIMA ')
-- OUTPUT:
7202
 ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:04) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print('OK')
else:
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.130637
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:55) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print('OK')
else S>100:
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.149872
-- ERROR:
  File "/home/codebench/codes/1667/2973/main.py", line 10
    else S>100:
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:56) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	print(S)
	print('OK')
else S>100:
	print(S)
	print('ACIMA')
-- ERROR:
File "XXXX", line 10
    else S>100:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:06) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S == 100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.100287
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:06) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S == 100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:07) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S == 100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.140842
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:37) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <=  100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.157292
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:37) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <=  100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:30:57) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <=  100:
	print(S)
	print('OK')
else :
	print(S)
	print('ACIMA')
-- EXECUTION TIME:
0.159823
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:32:38) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <=  100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:32:45) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <=  100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.147044
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:33:43) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:33:45) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- EXECUTION TIME:
0.183599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2973/main.py", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:02) 
-- CODE:
S1=int(input("posicao inicial: "))
V=float(input("velocidade do objeto: "))
T=float(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:34:04) 
-- CODE:
S1=int(input("posicao inicial: "))
V=float(input("velocidade do objeto: "))
T=float(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- EXECUTION TIME:
0.194953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2973/main.py", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:04) 
-- CODE:
S1=int(input("posicao inicial: "))
V=float(input("velocidade do objeto: "))
T=float(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S
	mensagem1 ='OK'
else :
	mensagem = S
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:50) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else :
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:34:52) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else :
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- EXECUTION TIME:
0.180847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2973/main.py", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:55) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else :
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(int(mensagem1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(int(mensagem1))
ValueError: invalid literal for int() with base 10: 'ACIMA'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:15) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else :
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- EXECUTION TIME:
0.16432
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:21) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else :
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:31) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- EXECUTION TIME:
0.145861
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:42) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:55) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:15) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:28) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:36:37) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- EXECUTION TIME:
0.166402
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:48) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

if S <= 100:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:51) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- EXECUTION TIME:
0.146855
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:51) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(int(mensagem))
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:39:36) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.173818
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:36) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S1+(V*T)
	mensagem1 ='OK'
else:
	mensagem = S1+(V*T)
	mensagem1 = "ACIMA"
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:28) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = "ACIMA"
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.111198
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:44) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:46) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.231019
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:33) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:41) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:12) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:27) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.160579
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:31) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:36) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem)
-- OUTPUT:
7202
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:46) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.139123
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
ACIMA
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
ACIMA
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:46) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
ACIMA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:45:28) 
-- CODE:
S1=int(input("posicao inicial: "))
V=("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)
ML=100
if S <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.127011
-- ERROR:
  File "/home/codebench/codes/1667/2973/main.py", line 2
    V=("velocidade do objeto: "))
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:46:46) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

ML=100
if V <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.125985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2973/main.py", line 2, in <module>
    V=int(("velocidade do objeto: "))
ValueError: invalid literal for int() with base 10: 'velocidade do objeto: '

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:47) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

ML=100
if V <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V=int(("velocidade do objeto: "))
ValueError: invalid literal for int() with base 10: 'velocidade do objeto: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:59) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

ML=100
if V <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    V=int(("velocidade do objeto: "))
ValueError: invalid literal for int() with base 10: 'velocidade do objeto: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:12) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

ML=100
if V <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:47:19) 
-- CODE:
S1=int(input("posicao inicial: "))
V=int(input("velocidade do objeto: "))
T=int(input("tempo de deslocamento: "))

S = S1 + (V*T)

ML=100
if V <= ML:
	mensagem = S
	mensagem1 ='OK'
else:
	mensagem = S
	mensagem1 = 'ACIMA'
	
print(mensagem)
print(mensagem1)
-- EXECUTION TIME:
0.147374
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
